--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 orderId: '20060711',
                 orderName: 'Key for Decrypt',
                 customerName: 'User',
-                successUrl: 'https://youtube.com',
-                failUrl: 'https://naver.com',
+                successUrl: 'https://kairos-hk.github.io/jran_website/key.html',
+                failUrl: 'https://kairos-hk.github.io/jran_website/error.html',
             })
         })
     </script>
