--- a/key.html
+++ b/key.html
@@ -2,32 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://js.tosspayments.com/v1"></script>
+    <link rel="stylesheet" href="key.css" />
   </head>
   <body>
     <div class="frame">
       <div class="overlap-wrapper">
         <div class="overlap">
-          <img class="rectangle" src="image 1.png " />
-          <p class="text-wrapper">Now you can restore your PC's Files!</p>
-          <div class="info-box">
-            <div class="overlap-group">
-              <p class="what-happened-to-my">
-                <span class="span"><b>Decrypt Key!</b><br /></span>
-                <span class="text-wrapper-2"
-                  >Your important files are encrypted.<br />Many of your documents, photos, videos, databases and other
-                  files are no longer accessible because they have been encrypted. Maybe you are busy looking for a
-                  way to recover your files, but do not waste your time. Nobody can recover your files without our
-                  decryption service.<br /><br
-                /></span>
-                <span class="span"><br /></span>
-                <span class="text-wrapper-2"><br /><br /></span>
-              </p>
-              <img class="line" src="img/line-1.svg" />
+          <img class="rectangle" src="image 1.png" />
+          <div class="buttons">
+            <div class="decrypt">
+              <div class="overlap-group"><div class="div">0</div></div>
             </div>
           </div>
-
+          <div class="decrypt-wrapper">
+            <div class="decrypt">
+              <div class="overlap-group"><div class="text-wrapper-2">2</div></div>
+            </div>
+          </div>
+          <div class="buttons-2">
+            <div class="overlap-group-wrapper">
+              <div class="overlap-group"><div class="text-wrapper-3">2</div></div>
+            </div>
+            <div class="div-wrapper">
+              <div class="decrypt">
+                <div class="overlap-group"><div class="div">4</div></div>
+              </div>
+            </div>
+          </div>
+          <div class="buttons-3">
+            <div class="decrypt">
+              <div class="overlap-group"><div class="div">7</div></div>
+            </div>
+          </div>
           <div class="lock-icon"><img class="lock" src="Lock icon.svg" /></div>
         </div>
       </div>
