--- a/key.html
+++ b/key.html
@@ -8,7 +8,7 @@
     <div class="frame">
       <div class="overlap-wrapper">
         <div class="overlap">
-          <img class="rectangle" src="image 1.png" />
+          <img class="rectangle" src="Rectangle 1.png" />
           <div class="buttons">
             <div class="decrypt">
               <div class="overlap-group"><div class="div">0</div></div>
