--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="frame">
       <div class="overlap-wrapper">
         <div class="overlap">
-          <img class="rectangle" src="image 1.png " />
+          <img class="rectangle" src="Rectangle 1.png" />
           <p class="text-wrapper">Oops, your files have been encrypted!</p>
           <div class="info-box">
             <div class="overlap-group">
