--- a/key.html
+++ b/key.html
@@ -11,30 +11,40 @@
           <img class="rectangle" src="Rectangle 1.png" />
           <div class="buttons">
             <div class="decrypt">
-              <div class="overlap-group"><div class="div">0</div></div>
+              <div class="overlap-group"><div class="text-wrapper">0</div></div>
             </div>
           </div>
           <div class="decrypt-wrapper">
             <div class="decrypt">
-              <div class="overlap-group"><div class="text-wrapper-2">2</div></div>
+              <div class="overlap-group"><div class="div">2</div></div>
             </div>
           </div>
+          <div class="div-wrapper">
+            <div class="decrypt">
+              <div class="overlap-group"><div class="text-wrapper-2">0</div></div>
+            </div>
+          </div>
+          <div class="overlap-group-wrapper">
+            <div class="overlap-group"><div class="text-wrapper-2">0</div></div>
+          </div>
           <div class="buttons-2">
-            <div class="overlap-group-wrapper">
-              <div class="overlap-group"><div class="text-wrapper-3">2</div></div>
+            <div class="decrypt">
+              <div class="overlap-group"><div class="text-wrapper-3">9</div></div>
             </div>
-            <div class="div-wrapper">
-              <div class="decrypt">
-                <div class="overlap-group"><div class="div">4</div></div>
-              </div>
-            </div>
+          </div>
+          <div class="decrypt-2">
+            <div class="overlap-group"><div class="text-wrapper-3">1</div></div>
           </div>
           <div class="buttons-3">
             <div class="decrypt">
-              <div class="overlap-group"><div class="div">7</div></div>
+              <div class="overlap-group"><div class="text-wrapper-2">2</div></div>
             </div>
           </div>
-          <div class="lock-icon"><img class="lock" src="Lock icon.svg" /></div>
+          <div class="buttons-4">
+            <div class="decrypt">
+              <div class="overlap-group"><div class="text-wrapper-4">6</div></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
